# Cursor

.cursor/rules/: fastapi.mdc
Backend/: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
Backend/app/: README_MIGRATIONS.md
Backend/app/alembic/: env.py
Backend/app/alembic/versions/: 6c10eb6e212f_initial_migration_create_teachers_.py
Backend/app/app/: __init__.py  main.py
Backend/app/app/core/: config.py
Backend/app/app/db/: base.py
Backend/app/app/models/: __init__.py  class_model.py  course.py  teacher.py
Backend/app/core/: config.py
Backend/specs/: 00_contracts.md  01_setup.md
